--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"API": "https://beta.phila.gov/wp-json/last-updated/v1", "SaveFolder": "/home/ec2-user/environment/betastaticsitegenerator/sitefiles/", "BetaUrl": "https://beta.phila.gov/wp-json/wp/v2/", "PerPageUrl": "?per_page=1", "PerPageAndUrl": "&per_page=1", "NewUrl": "market.phila.gov", "Header": "'user-agent': 'beta-static-generator/0.0.1'", "LastRun": "2018-04-19 16:31:52", "Error": "False"}
+{ "API": "https://beta.phila.gov/wp-json/last-updated/v1/all", "SaveFolder": "sitefiles/", "NewUrl": "market.phila.gov", "LastRun": "2018-04-19 16:31:52", "Error": "False" }
