Use more python conventons, logger, local and S3 options

--- a/config.json
+++ b/config.json
@@ -1,1 +1,7 @@
-{ "API": "https://beta.phila.gov/wp-json/last-updated/v1/all", "SaveFolder": "sitefiles/", "NewUrl": "market.phila.gov", "LastRun": "2018-04-19 16:31:52", "Error": "False" }
+{
+  "api": "https://beta.phila.gov/wp-json/last-updated/v1/all",
+  "save_folder": "sitefiles/",
+  "new_url": "market.phila.gov",
+  "last_run": "1999-04-19 16:31:52",
+  "error": false
+}
