Declare s3 bucket in config file

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "api": "https://beta.phila.gov/wp-json/last-updated/v1/all",
   "save_folder": "",
   "new_base_url": "http://beta-scraper-test.s3-website-us-east-1.amazonaws.com",
+  "s3_bucket": "beta-scraper-test",
   "cloudwatch": {
     "heartbeat": {
       "namespace": "test-phila-gov-site-generator",
