--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
-  "api": "https://admin.phila.website/wp-json/last-updated/v1/all",
   "save_folder": "",
-  "host_to_replace": "admin.phila.website",
+  "wordpress_url_page_host": "admin.phila.website",
+  "wordpress_scrape_host": "http://admin-phila-websites-35026303.us-east-1.elb.amazonaws.com",
   "new_base_url": "https://www.phila.website",
   "s3_bucket": "www.phila.website",
+  "cloudfront_distribution": "EAURQRDQU47EO",
+  "max_invalidations": 50,
   "cloudwatch": {
     "heartbeat": {
       "namespace": "test-phila-gov-site-generator",
