--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ python-dateutil = "==2.7.2"
 requests = "==2.20.0"
 "s3transfer" = "==0.1.13"
 six = "==1.11.0"
-slack-logger = "==0.3.1"
+teams-logger = "==0.4.1"
 "urllib3" = "==1.24.2"
 
 [dev-packages]
